--- a/src/index.css
+++ b/src/index.css
@@ -143,9 +143,6 @@ nav a:hover {
   padding: 8px;
 }
 
-.ms-auto {
-}
-
 /* General Page Layout */
 .page-background {
   background-color: #181d31;
@@ -161,7 +158,6 @@ nav a:hover {
 .profilePic {
   display: flex;
   width: 15%;
- 
   border-radius: 50%;
   border: solid #678983 10px;
   margin-top: 30px;
@@ -184,7 +180,7 @@ nav a:hover {
   border-radius: 20%;
   display: flex;
   margin: auto;
-width: 50%;
+  width: 50%;
 }
 
 .home-title {
@@ -207,7 +203,7 @@ width: 50%;
   background-color: #e6ddc4;
   color: #678983;
   position: absolute;
-  right:35px;
+  right: 35px;
   top: 95px;
   text-align: center;
   justify-content: center;
@@ -317,11 +313,11 @@ span {
 
 .cv {
   font-size: 1em;
-color: #e6ddc4;
-text-decoration: none;
- background-color: #678983;
- border-radius: 20px;
- padding: 10px;
+  color: #e6ddc4;
+  text-decoration: none;
+  background-color: #678983;
+  border-radius: 20px;
+  padding: 10px;
 }
 .cv:hover {
   color: #678983;
@@ -378,7 +374,7 @@ text-decoration: none;
 .blogText {
   color: #e6ddc4;
   padding: 10px;
-  font-size: 1.5em;;
+  font-size: 1.5em;
 }
 
 .blogCard {
