--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,22 @@ nav a:hover {
 }
 
 /* Home Page */
+
+.whiteSection {
+  background-color: #e6ddc4 !important;
+  height: 200px;
+  border-radius: 50px;
+}
+
+.news {
+  color: #678983;
+}
+
+.colorSection {
+  background-color: #678983;
+  height: 200px;
+  border-radius: 50px;
+}
 .profilePic {
   display: flex;
   width: 15%;
@@ -102,12 +118,16 @@ nav a:hover {
   top: 100px;
 }
 
+.skills {
+  color: #678983 !important;
+} 
+
 .page-background-home {
   background-color: #181d31;
   width: 100%;
   background-position: center center;
   border: #181d31 solid 20px;
-  height: 87vh;
+  height: 100%;
   background-repeat: no-repeat;
 }
 
@@ -133,7 +153,7 @@ nav a:hover {
 }
 
 .aboutMeCard {
-  background-color: #e6ddc4 !important;
+  background-color: #f0e9d2 !important;
   color: #678983;
   text-align: center;
   border: #678983 solid 10px !important;
