--- a/src/pages/Blog/blog.css
+++ b/src/pages/Blog/blog.css
@@ -11,11 +11,12 @@
     display: flex !important;
     flex-wrap: wrap !important;
     justify-content: space-around !important;
+    margin-bottom: 50px !important;
   }
   
   
   .picture {
-    background-image: url(../src/assets/maldives.jpeg);
+    background-image: url(../../assets/maldives.jpeg);
     width: 100%;
     background-position: center center;
     padding-bottom: 100px;
