--- a/src/components/Blog/blogComp.css
+++ b/src/components/Blog/blogComp.css
@@ -4,7 +4,7 @@
   }
   
   .blogLinkText {
-    color: #e6ddc4 !important;
+    color: var(--light-blue) !important;
     font-size: 1em;
     text-decoration: none;
   }
@@ -14,33 +14,32 @@
     text-align: center !important;
     justify-content: center !important;
     align-items: center !important;
-    color: #e6ddc4 !important;
     font-weight: bold !important;
     font-size: 100% !important;
     width: 40% !important;
     border-radius: 20px !important;
-    background-color: rgb(5, 85, 146) !important;
-    border: rgb(5, 85, 146) solid 10px !important;
+    background-color: var(--dark-blue) !important;
+    border: var(--dark-blue) solid 10px !important;
   }
 
   .blog-card {
     width: 550px;
     display: flex;
     justify-content: center;
-    border: 1rem solid rgb(5, 85, 146) !important;
+    border: 1rem solid var(--dark-blue) !important;
     margin: 10px auto 10px auto;
-    background-color: #e6ddc4 !important;
+    background-color: var(--light-blue) !important;
     border-radius: 50px !important;
   }
   
   .blogTitle {
     margin: 0 !important;
     padding: 0 !important;
-    color: #181d31;
+    color: var(--navy-blue);
   }
   .blogDate {
     margin: 0 !important;
     padding: 0 !important;
-    color: #181d31;
+    color: var(--navy-blue);
     font-size: 1.5em;
   }
