--- a/src/pages/Freelance/freelance.css
+++ b/src/pages/Freelance/freelance.css
@@ -1,14 +1,14 @@
 /* Freelance Page */
 
 .pageUnderConstruction {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    color: #181d31;
-    background-color: #e6ddc4;
-    padding: 50px;
-    border-radius: 50px;
-    border: rgb(5, 85, 146) solid 20px;
-  }
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  color: var(--navy-blue);
+  background-color: var(--light-blue);
+  padding: 50px;
+  border-radius: 50px;
+  border: var(--dark-blue) solid 20px;
+}
