--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,9 +1,12 @@
-
 :root {
-  font-family: 'Caveat', cursive !important;
-  font-family: 'Fuzzy Bubbles', cursive !important;
-  line-height: 1.5;
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
   font-weight: 400;
+  --light-blue: #caf0f8;
+  --aqua-blue: #5ff;
+  --dark-blue: rgb(5, 85, 146);
+  --navy-blue: #181d31;
+  --cream:  #e6ddc4;
 }
 
 * {
@@ -15,66 +18,57 @@
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #f0e9d2;
-  padding: 20px;
-  font-family: 'Caveat', cursive !important;
-  font-family: 'Fuzzy Bubbles', cursive !important;
+  color: var(--light-blue);
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
 }
 
 h2 {
   font-size: 2em;
   line-height: 1;
-  color: #f0e9d2;
-  padding: 20px;
-  font-family: 'Caveat', cursive !important;
-  font-family: 'Fuzzy Bubbles', cursive !important;
+  color: var(--light-blue);
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
 }
 
 h4 {
   display: flex;
   text-align: center;
   justify-content: center;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
-} 
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
+}
 
-h5 { 
-    text-decoration: none;
-      line-height: 1;
+h5 {
+  text-decoration: none;
+  line-height: 1;
   display: flex;
   text-align: center;
   justify-content: center;
   font-size: 100%;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
 }
 
 /* General Page Layout */
 .page-background {
-    background-color: #181d31;
-    min-height: 120vh;
-    margin-top: 0;
-    text-align: center;
-    padding: 0;
-    box-sizing: border-box;
-    position: relative;
-  }
+  background-color: var(--navy-blue);
+  min-height: 120vh;
+  margin-top: 0;
+  text-align: center;
+  padding: 0;
+  box-sizing: border-box;
+  position: relative;
+}
 
 /* Avatar */
 
 .avatarImage {
-    height: 300px;
-    margin: auto;
-    padding: auto;
-   } 
+  height: 300px;
+  margin: auto;
+  padding: auto;
+}
 
-   
 /* Media Queries */
 
 @media (max-width: 900px) {
@@ -86,33 +80,25 @@ h5 {
     margin-bottom: 1%;
     padding: 1rem;
     font-style: italic;
-    font-family: 'Caveat', cursive;
-    font-family: 'Fuzzy Bubbles', cursive;
     color: rgb(5, 85, 146);
   }
 
   .text {
     color: rgb(5, 85, 146) !important;
-    font-family: 'Caveat', cursive;
-    font-family: 'Fuzzy Bubbles', cursive;
     font-size: 70%;
     text-align: center;
     background-color: white;
     border-radius: 20px;
-    padding: 1%
+    padding: 1%;
   }
 
   .myname {
     color: rgb(5, 85, 146) !important;
-    font-family: 'Caveat', cursive;
-    font-family: 'Fuzzy Bubbles', cursive;
     text-align: center;
     font-size: 100%;
   }
 
   .brand {
-    font-family: 'Caveat', cursive;
-    font-family: 'Fuzzy Bubbles', cursive;
     text-align: center;
     color: rgb(5, 85, 146) !important;
     font-size: 100%;
@@ -139,23 +125,23 @@ h5 {
   .card {
     width: 100%;
     height: auto;
-    background: #fff;
+    background: #caf0f8;
     border-radius: 5%;
-    border: 1rem solid #48B;
+    border: 1rem solid rgb(5, 85, 156);
   }
 
   .cardBodyText {
     font-size: 100%;
     height: auto;
-    border-top: 1rem solid #48B;
+    border-top: 1rem solid rgb(5, 85, 156);
   }
 
   .cardBodyLinks {
     font-size: 100%;
     height: auto;
-    border-top: 1rem solid #48B;
+    border-top: 1rem solid rgb(5, 85, 156);
   }
-  
+
   .profilePic {
     width: 30%;
     height: 50%;
@@ -163,4 +149,3 @@ h5 {
     border: solid rgb(5, 85, 146) 5px;
   }
 }
-
