--- a/src/components/ContactMe/contactMe.css
+++ b/src/components/ContactMe/contactMe.css
@@ -3,14 +3,14 @@
 .formlabel {
   display: flex;
   margin: auto;
-  color: #5FF;
+  color: var(--aqua-blue);
   text-align: center;
   align-items: center;
   justify-content: center;
   font-weight: bold;
   font-size: 1rem;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
+  font-family: "Caveat", cursive;
+  font-family: "Fuzzy Bubbles", cursive;
 }
 
 .forminput {
@@ -20,8 +20,8 @@
   align-items: center;
   margin: auto;
   width: 50% !important;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
+  font-family: "Caveat", cursive;
+  font-family: "Fuzzy Bubbles", cursive;
 }
 
 .formsubmit {
@@ -30,34 +30,36 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  color: rgb(5, 85, 146) !important;
-  background-color: #5FF;
+  color: var(--dark-blue) !important;
+  background-color: #5ff;
   font-weight: bold;
   font-size: 1rem;
   width: 30%;
   margin-bottom: 5%;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
 }
 
 .submit-button {
   display: flex;
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
   margin: 40px auto 40px auto !important;
   text-align: center !important;
   justify-content: center !important;
   align-items: center !important;
-  color: #181d31 !important;
+  color: var(--navy-blue) !important;
   font-weight: bold !important;
   font-size: 100% !important;
   width: 40% !important;
   border-radius: 20px !important;
-  border: rgb(5, 85, 146) solid 10px !important;
-  background-color: #5FF !important;
+  border: var(--dark-blue) solid 10px !important;
+  background-color: var(--aqua-blue) !important;
 }
 
 .submit-button:hover {
-  color: #5FF !important;
-  background-color:  #181d31 !important;
+  color: var(--aqua-blue) !important;
+  background-color: var(--navy-blue) !important;
 }
 
 .messagebox {
@@ -68,19 +70,19 @@
   align-items: center;
   width: 50% !important;
   height: 100px;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
 }
 
 .messagelabel {
   margin: auto;
   display: flex;
-  color: #5FF;
+  color: var(--aqua-blue);
   font-weight: bold;
   font-size: 1rem;
   text-align: center;
   justify-content: center;
   align-items: center;
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
+  font-family: "Caveat", cursive;
+  font-family: "Fuzzy Bubbles", cursive;
 }
