--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -1,28 +1,27 @@
-
 .search {
-    color: rgb(5, 85, 146) !important;
-    border: rgb(5, 85, 146) solid 5px !important;
-    background-color: #f0e9d2 !important;
-    border-radius: 20px !important;
-    width:40% !important;
-    position: relative;
-    top: 100px;
-  }
-  
-  .search-button {
-    color: rgb(5, 85, 146) !important;
-    font-weight: bold !important;
-    font-size: 1rem !important;
-    border-radius: 20px !important;
-    border:rgb(5, 85, 146) solid 5px !important;
-    background-color: #f0e9d2 !important;
-    position: relative;
-    top: 100px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  
-  .search-button:hover {
-    color: #e6ddc4 !important;
-    background-color: #678983 !important;
-  }
+  color: var(--dark-blue) !important;
+  border: var(--dark-blue) solid 5px !important;
+  background-color: var(--light-blue) !important;
+  border-radius: 20px !important;
+  width: 40% !important;
+  position: relative;
+  top: 100px;
+}
+
+.search-button {
+  color: var(--dark-blue) !important;
+  font-weight: bold !important;
+  font-size: 1rem !important;
+  border-radius: 20px !important;
+  border: var(--dark-blue) solid 5px !important;
+  background-color: var(--light-blue) !important;
+  position: relative;
+  top: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.search-button:hover {
+  color: var(--light-blue) !important;
+  background-color: var(--dark-blue) !important;
+}
