--- a/src/pages/Blog/blog.css
+++ b/src/pages/Blog/blog.css
@@ -1,31 +1,29 @@
-
 /* Blog Page */
+
 .blogText {
-    color: #e6ddc4;
-    padding: 10px;
-    font-size: 1.5em;
-  }
-  
-  
-  .blogCard {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    justify-content: space-around !important;
-    margin-bottom: 50px !important;
-  }
-  
-  
-  .picture {
-    background-image: url(../../assets/maldives.jpeg);
-    width: 100%;
-    background-position: center center;
-    padding-bottom: 100px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: #e6ddc4 solid 50px;
-    border-radius: 50px;
-  }
-  
-  .picture-section {
-    padding: 50px;
-  }
+  color: var(--light-blue);
+  padding: 10px;
+  font-size: 1.5em;
+}
+
+.blogCard {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  justify-content: space-around !important;
+  margin-bottom: 50px !important;
+}
+
+.picture {
+  background-image: url(../../assets/images/maldives.jpeg);
+  width: 100%;
+  background-position: center center;
+  padding-bottom: 100px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: var(--light-blue) solid 20px;
+  border-radius: 40px;
+}
+
+.picture-section {
+  padding: 50px;
+}
