--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -14,19 +14,19 @@
   text-align: center;
   margin: 0 auto 50px auto;
   padding: 20px;
-  border: rgb(5, 85, 146) solid 20px;
+  border: var(--dark-blue) solid 20px;
   font-size: 1rem;
   font-weight: bold;
-  color: rgb(5, 85, 146) !important;
+  color: var(--dark-blue) !important;
   font-family: "Caveat", cursive;
   font-family: "Fuzzy Bubbles", cursive;
-  background-color: #caf0f8;
+  background-color: var(--light-blue);
   border-radius: 20px;
   width: 50%;
 }
 
 .button {
-  color: rgb(5, 85, 146) !important;
+  color: var(--dark-blue) !important;
   margin-top: 1% !important;
   margin-bottom: 10% !important;
 }
@@ -34,12 +34,11 @@
 .fa {
   font-size: 6rem;
   font-weight: bold;
-  color: rgb(5, 85, 146) !important;
+  color: var(--dark-blue) !important;
 }
 
 .fa:hover {
   font-size: 5rem;
-  color: #678983;
 }
 
 span {
@@ -55,7 +54,7 @@ span {
 
 .contactMeForm {
   width: 80%;
-  background-color: rgb(5, 85, 146) !important;
+  background-color: var(--dark-blue) !important;
   margin: auto;
   border-radius: 60px;
   padding: 10px;
@@ -68,17 +67,17 @@ span {
   justify-content: center !important;
   text-decoration: none !important;
   align-items: center !important;
-  color: #5ff !important;
+  color: var(--aqua-blue) !important;
   font-weight: bold !important;
   font-size: 100% !important;
   width: 30% !important;
   border-radius: 20px !important;
-  border: rgb(5, 85, 146) solid 10px !important;
-  background-color: rgb(5, 85, 146) !important;
+  border: var(--dark-blue) solid 10px !important;
+  background-color: var(--dark-blue) !important;
   padding-bottom: 10px;
 }
 
 .cv:hover {
-  color: #5ff !important;
-  background-color: #181d31 !important;
+  color: var(--aqua-blue) !important;
+  background-color: var(--navy-blue) !important;
 }
