--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,7 +5,9 @@
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border-radius: 50px;
-  box-shadow: 35px 35px 68px 0px rgba(19, 209, 254, 0.5), inset -0px -0px 16px 0px rgba(19, 209, 254, 0.6), inset 0px 11px 28px 0px rgb(255, 255, 255);
+  box-shadow: 35px 35px 68px 0px rgba(19, 209, 254, 0.5),
+    inset -0px -0px 16px 0px rgba(19, 209, 254, 0.6),
+    inset 0px 11px 28px 0px rgb(255, 255, 255);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -13,17 +15,13 @@
 }
 
 .home-title {
-  color: rgb(5, 85, 146) !important;
-  font-family: 'Caveat', cursive !important;
-  font-family: 'Fuzzy Bubbles', cursive !important;
+  color: var(--dark-blue) !important;
   text-align: center;
 }
 
 .home-subtitle {
-  font-family: 'Caveat', cursive !important;
-  font-family: 'Fuzzy Bubbles', cursive !important;
   text-align: center !important;
-  color: rgb(5, 85, 146) !important;
+  color: var(--dark-blue) !important;
   padding-bottom: 5% !important;
 }
 
@@ -38,7 +36,6 @@
   width: 15%;
   height: 25%;
   border-radius: 50px;
-  border: rgb(5, 85, 146) solid  10px;
+  border: var(--dark-blue) solid 10px;
   margin-top: 20px;
 }
-
