--- a/src/pages/ProjectGallery/projectGallery.css
+++ b/src/pages/ProjectGallery/projectGallery.css
@@ -3,16 +3,15 @@
 .intro {
   width: 100%;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1em;
   margin-bottom: 1%;
   padding: 1rem;
   font-family: 'Caveat', cursive;
   font-family: 'Fuzzy Bubbles', cursive;
-  color: rgb(5, 85, 146);
+  color: var(--dark-blue);
 }
 
 .galleryBackground {
- 
   background-image: url(./assets/vecteezy_the-wild-ocean-view_6177787.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -27,7 +26,5 @@
 }
 
 .gallerytitle {
-  font-family: 'Caveat', cursive;
-  font-family: 'Fuzzy Bubbles', cursive;
-  color: rgb(5, 85, 146);
+  color: var(--dark-blue);
 }
