colour change to nav bar and gallery page to make text more visible

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -40,7 +40,7 @@ nav a:hover {
 }
 
 .nav-link {
-  color: var(--navy-blue) !important;
+  color: var(--light-blue) !important;
   font-size: 60%;
   font-family: 'Caveat', cursive;
   font-family: 'Fuzzy Bubbles', cursive;
