blog link added, style of homepage edited

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -7,7 +7,7 @@
   --dark-blue: rgb(5, 85, 146);
   --navy-blue: #181d31;
   --cream:  #e6ddc4;
-  height: 100%;
+  height: 100vh;
 }
 
 * {
@@ -55,8 +55,6 @@ h5 {
 .page-background {
   background-color: var(--navy-blue);
   min-height: 100vh;
-  margin-top: 0;
-  margin-bottom: 0;
   text-align: center;
   padding: 0;
   box-sizing: border-box;
