--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -19,6 +19,7 @@
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 0 !important;
   color: var(--light-blue);
   font-family: "Caveat", cursive !important;
   font-family: "Fuzzy Bubbles", cursive !important;
@@ -27,6 +28,15 @@ h1 {
 h2 {
   font-size: 2em;
   line-height: 1;
+  margin: 0 !important;
+  color: var(--light-blue);
+  font-family: "Caveat", cursive !important;
+  font-family: "Fuzzy Bubbles", cursive !important;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin:0 !important;
   color: var(--light-blue);
   font-family: "Caveat", cursive !important;
   font-family: "Fuzzy Bubbles", cursive !important;
@@ -56,9 +66,8 @@ h5 {
   background-color: var(--navy-blue);
   min-height: 100vh;
   text-align: center;
-  padding: 0;
-  box-sizing: border-box;
-  position: relative;
+  padding: 1%;
+  margin:0;
 }
 
 /* Avatar */
